# Data-Manager

./: .env.example  CHANGELOG.md  Dockerfile  README.md  app.py  data_manager_assets.py  data_manager_config.py  data_manager_inventory.py  data_manager_jobs.py  data_manager_media.py  data_manager_server.py  data_manager_store.py  data_manager_utils.py  data_manager_version.py  data_manager_views.py  docker-compose.unraid.yml  docker-compose.yml  pyproject.toml
